	PR tree-optimization/47355 	* tree-eh.c (cleanup_empty_eh_merge_phis): Give up if 	NOP has non-debug uses beyond PHIs in new_bb.

* g++.dg/opt/pr47355.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169094 138bc75d-0d04-0410-961f-82ee72b054a4